# CLauncher

./: .gitignore  CMakeLists.txt
CLauncher/: CMakeLists.txt  Core.h  Resource.aps  Resource.rc  allocator.c  allocator.h  arrutil.c  arrutil.h  authenticate.c  authenticate.h  base64.h  curseforge.c  curseforge.h  downloader.c  downloader.h  launcher.c  launcher.h  main.c  main.h  osutil.h  parallel.c  parallel.h  process.c  process.h  strutils.c  strutils.h  todos.h  uuid4.h  weblogin.c  weblogin.h  winimport.h  ziphelper.c  ziphelper.h
third/cJSON/Debug/: cjson.exp  cjson.lib  libcjson.lib
third/cJSON/Release/: cjson.exp  libcjson.lib
third/curl/x32 Release/lib/: libcurl_a.lib
third/curl/x64 Release/lib/: libcurl_a.lib
third/minhook/lib/Debug/: libMinHook.x64.lib  libMinHook.x86.lib
third/minhook/lib/Release/: libMinHook.x64.lib  libMinHook.x86.lib
third/raylib/include/: raylib.h
third/raylib/lib/Debug/: raylib.exp
third/raylib/lib/Release/: raylib.exp  raylib.lib
third/ziplib/x32/Debug/: libzip-static.lib  libzip.exp  libzip.lib
third/ziplib/x32/Release/: libzip.exp  libzip.lib
third/ziplib/x64/Debug/: libzip-static.lib  libzip.exp  libzip.lib
third/ziplib/x64/Release/: libzip.exp  libzip.lib
third/zlib/x32/Debug/: libz-static.lib  libz.exp  libz.lib
third/zlib/x32/Release/: libz-static.lib  libz.exp  libz.lib
third/zlib/x64/Debug/: libz-static.lib  libz.exp  libz.lib
third/zlib/x64/Release/: libz-static.lib  libz.exp  libz.lib
ui-imgui/: CMakeLists.txt  customwidgets.h  example.h  wpage.cpp  wpage.h
ui-imgui/imgui/: example.cpp  example.h
